--- a/AppointmentSystem.WepApi/AppointmentSystem.WebApi.csproj
+++ b/AppointmentSystem.WepApi/AppointmentSystem.WebApi.csproj
@@ -8,6 +8,7 @@
 	
 	<ItemGroup>
 		<PackageReference Include="FluentValidation" Version="12.0.0" />
+		<PackageReference Include="FluentValidation.AspNetCore" Version="11.3.1" />
 		<PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.10" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
