--- a/src/Core/AppointmentSystem.Domain/AppointmentSystem.Domain.csproj
+++ b/src/Core/AppointmentSystem.Domain/AppointmentSystem.Domain.csproj
@@ -11,4 +11,8 @@
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="8.0.20" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Helpers\" />
+	</ItemGroup>
+
 </Project>
